lab1/Test/L1-A-0-2.output
Error Type A at Line 2
Error Type A at Line 23
Error Type A at Line 34
Error Type A at Line 36
Error Type A at Line 38
